@startuml

title __MEDIATOR's Class Diagram__\n

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        abstract class com.groupjn.orderservice.mediator.Component {
            - name : String
            + Component()
            + getName()
            {abstract} + receive()
            {abstract} + send()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        class com.groupjn.orderservice.mediator.ComponentA {
            + ComponentA()
            + receive()
            + send()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        class com.groupjn.orderservice.mediator.ComponentB {
            + ComponentB()
            + receive()
            + send()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        class com.groupjn.orderservice.mediator.ConcreteMediator {
            - COMPONENT_A : String
            - COMPONENT_B : String
            - registerComponetMap : Map<String, Component>
            + notify()
            + register()
            - reactOnA()
            - reactOnB()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        interface com.groupjn.orderservice.mediator.Mediator {
            {abstract} + notify()
            {abstract} + register()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace mediator {
        class com.groupjn.orderservice.mediator.MediatorTest {
            + testMediator()
        }
      }
    }
  }
  

  com.groupjn.orderservice.mediator.Component o-- com.groupjn.orderservice.mediator.Mediator : mediator
  com.groupjn.orderservice.mediator.ComponentA -up-|> com.groupjn.orderservice.mediator.Component
  com.groupjn.orderservice.mediator.ComponentB -up-|> com.groupjn.orderservice.mediator.Component
  com.groupjn.orderservice.mediator.ConcreteMediator .up.|> com.groupjn.orderservice.mediator.Mediator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
